# task

./: .env  SCRIPT.sql  alembic.ini  dependencies.py  file::memory:  main.py  nimble_contacts.xlsx  pyproject.toml
config/: __init__.py  app_settings.py  config_base.py  db_config.py
db/: BaseRepository.py  ContactRepository.py  uow.py
migration/: env.py
migration/versions/: d0b73f70fe74_contact_model.py
model/: contact.py  mixins.py
routers/: __init__.py  health_router.py  import_router.py  search_router.py
schema/: health_check.py  nimble_contact.py
services/: __init__.py  import_service.py
tests/: test_health_check.py  test_import.py  test_uow.py
