[project]
name = "nimble"
version = "0.1.0"
description = "nimble test task"
authors = [
    {name = "Nikita Grinyov",email = "nikita3grynov@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "psycopg2 (>=2.9.11,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "fastapi (>=0.119.0,<0.120.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pydantic (>=2.12.2,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "alembic (>=1.17.0,<2.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "schedule (>=1.2.2,<2.0.0)",
    "fastapi-utils (>=0.8.0,<0.9.0)",
    "aiosqlite (>=0.21.0,<0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
